# qmsolve

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
examples/: bouncing_quantum_ball.py  harmonic_oscillator.py  scattering_circular_barrier.py  scattering_staggered_grid.py  visscher_prop.py
qmsolve/: hamiltonian.py  potentials.py  test_Hamiltonian.py  time_evolve.py  video_utils.py
quantum/: potentials.py  states.py  video_utils.py
