[metadata]
# replace with your username:
name = qmsolve-dhudsmith
version = 0.0.1
author = D. Hudson Smith
author_email = dane2@clemson.edu
description = Solve the Schrodinger Equation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dhudsmith/qmsolve
;project_urls =
;    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = qmsolve
packages = find:
python_requires = >=3.8

[options.packages.find]
where = qmsolve